cruzy-demo/force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <description>Cruzy Cruise Club membership record tracking enrollment, billing, and renewal status.</description>
    <label>Membership</label>
    <nameField>
        <label>Member Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>