cruzy-demo/force-app/main/default/objects/Membership__c/fields/Biennial__c.field-meta.xml
<CustomField>
    <fullName>Biennial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biennial</label>
    <type>Checkbox</type>
</CustomField>