cruzy-demo/force-app/main/default/objects/Membership__c/fields/Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date__c</fullName>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>