cruzy-demo/force-app/main/default/objects/Membership__c/fields/Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Date__c</fullName>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>