cruzy-demo/force-app/main/default/objects/Membership__c/fields/Last_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Renewal_Date__c</fullName>
    <label>Last Renewal Date</label>
    <type>Date</type>
</CustomField>