cruzy-demo/force-app/main/default/objects/Membership__c/fields/Paid_Through__c.field-meta.xml
<CustomField>
    <fullName>Paid_Through__c</fullName>
    <label>Paid Through</label>
    <type>Date</type>
</CustomField>