cruzy-demo/force-app/main/default/objects/Membership__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Inactive - Need Payment</fullName><default>false</default><label>Inactive - Need Payment</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>On Hold</fullName><default>false</default><label>On Hold</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>