cruzy-demo/force-app/main/default/objects/Membership__c/listViews/Active_Memberships.listView-meta.xml
<ListView>
    <fullName>Active_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Enroll_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Next_Billing_Date__c</columns>
    <columns>Auto_Renewal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Memberships</label>
    <language>en_US</language>
</ListView>