cruzy-demo/force-app/main/default/objects/Membership__c/listViews/All_Memberships.listView-meta.xml
<ListView>
    <fullName>All_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Enroll_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Next_Billing_Date__c</columns>
    <columns>Auto_Renewal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Memberships</label>
    <language>en_US</language>
</ListView>